--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Assignment 3</title>
 </head>
 <body>
-    
-</body>
+    <header class="">
+        <nav class="flex justify-around mt-10">
+            <div class="flex items-center">
+                <div class="bg-[#ABEF5F] h-8 w-8 flex items-center justify-center  rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div>
+                <h1 class="font-black ml-2 text-2xl">Rinterio</h1>
+            </div>
+            <div>
+                <ul class="flex">
+                    <li class="font-medium mx-2">Home</li>
+                    <li class="text-[#737373] mx-2">Services</li>
+                    <li class="text-[#737373] mx-2">Portfolio</li>
+                    <li class="text-[#737373] mx-2">Blogs</li>
+                    <li class="text-[#737373] mx-2">Contact Us</li>
+                </ul>
+            </div>
+            <div class="flex">
+            <div class="flex">
+                <a class="mx-2 flex items-center justify-center bg-[#ABEF5F] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#ABEF5F] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
+            </div>
+                <div class="flex mx-2 items-center px-5 bg-[#ABEF5F] rounded-full text-center">
+                    <a class="">Book Consult</a>
+                    <div class="ml-2 bg-[#000000] h-6 w-6 text-center rounded-2xl -rotate-45">
+                        <i class="text-white ri-arrow-right-line"></i>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="flex-col text-center">
+            <div class="mt-20"><img class="mx-auto" src="assets/banner.png" alt=""></div>
+            <h1 class="text-4xl font-black mt-8">A barn house of this design has a striking appearance</h1>
+            <p class="mt-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="mt-5 px-5 py-2 rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+        </div>   
+    </header>
+</body>  
 </html>
