--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
     <title>Assignment 3</title>
 </head>
 <body>
-    <header class="">
-        <nav class="flex justify-around mt-10">
+    <header class="h-screen">
+        <nav class="flex justify-around pt-5">
             <div class="flex items-center">
                 <div class="bg-[#ABEF5F] h-8 w-8 flex items-center justify-center  rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div>
                 <h1 class="font-black ml-2 text-2xl">Rinterio</h1>
             </div>
-            <div>
-                <ul class="flex">
+            <div class="">
+                <ul class="lg:flex hidden lg:visible lg:items-center">
                     <li class="font-medium mx-2">Home</li>
                     <li class="text-[#737373] mx-2">Services</li>
                     <li class="text-[#737373] mx-2">Portfolio</li>
                     <li class="text-[#737373] mx-2">Blogs</li>
                     <li class="text-[#737373] mx-2">Contact Us</li>
                 </ul>
+            <div class="bg-[#e6e6e6] h-10 w-10 flex lg:hidden items-center justify-center  rounded-full"><i class="ri-menu-line"></i></div>
             </div>
+            <div class="lg:flex hidden lg:visible">
             <div class="flex">
-            <div class="flex">
-                <a class="mx-2 flex items-center justify-center bg-[#ABEF5F] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
-                <a class="mx-2 flex items-center justify-center bg-[#ABEF5F] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#e4e4e4] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#e4e4e4] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
             </div>
                 <div class="flex mx-2 items-center px-5 bg-[#ABEF5F] rounded-full text-center">
                     <a class="">Book Consult</a>
@@ -39,10 +40,32 @@
         </nav>
         <div class="flex-col text-center">
             <div class="mt-20"><img class="mx-auto" src="assets/banner.png" alt=""></div>
-            <h1 class="text-4xl font-black mt-8">A barn house of this design has a striking appearance</h1>
-            <p class="mt-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="mt-5 px-5 py-2 rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+            <h1 class="text-3xl font-black m-8">A barn house of this design has a striking appearance</h1>
+            <p class="m-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 outline-[#0073ff] rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
         </div>   
     </header>
+    <main >
+        
+        <!-- <div class="bg-slate-500">
+            <div class="mt-11 mx-10 flex">
+                <div class="w-1/2">
+                    <img src="assets/Vector.png" alt="">
+                    <div class="ml-20"><button class="mt-5 px-5 py-2 rounded-full bg-[#ffffff] mx-auto">View Details</button></div>
+                    <p></p>
+                    <h1 class="text-4xl font-black mt-8">We design thoughtful, liveable spaces</h1>
+                    <p class="mt-5">The barn house captivates with its blend of rustic charm and 
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <div>
+                    <div class="h-28 flex  bg-white rounded-3xl mt-10"><img src="assets/commercial.png" class="h-20" alt=""></div>
+                    <div class="h-28 flex  bg-white rounded-3xl mt-10"><img src="assets/residential.png" class="h-20"  alt=""></div>
+                </div>
+                </div>
+                <div  class="w-1/2">
+
+                </div>
+            </div>
+        </div> -->
+    </main>
 </body>  
 </html>
