Another section done

--- a/index.html
+++ b/index.html
@@ -45,27 +45,38 @@
             <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 outline-[#0073ff] rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
         </div>   
     </header>
-    <main >
-        
-        <!-- <div class="bg-slate-500">
-            <div class="mt-11 mx-10 flex">
-                <div class="w-1/2">
-                    <img src="assets/Vector.png" alt="">
-                    <div class="ml-20"><button class="mt-5 px-5 py-2 rounded-full bg-[#ffffff] mx-auto">View Details</button></div>
-                    <p></p>
-                    <h1 class="text-4xl font-black mt-8">We design thoughtful, liveable spaces</h1>
-                    <p class="mt-5">The barn house captivates with its blend of rustic charm and 
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
-                <div>
-                    <div class="h-28 flex  bg-white rounded-3xl mt-10"><img src="assets/commercial.png" class="h-20" alt=""></div>
-                    <div class="h-28 flex  bg-white rounded-3xl mt-10"><img src="assets/residential.png" class="h-20"  alt=""></div>
+    <main>
+        <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-40 pb-10 flex">
+            <div class="mt-20 lg:flex lg:justify-center">
+            <div class="lg:w-1/3">
+                <div class="">
+                        <button class="font-black text-sm justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto"><i class="text-black ri-arrow-right-line"></i>About Us</button>
+                    <h1 class="mx-10 mt-5 text-2xl font-black text-center lg:text-left">We design thoughtful, liveable spaces</h1>
+                    <p class="mx-10 mt-5 text-center lg:text-left">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
+                <div class="flex mt-10 mx-7 rounded-xl bg-white p-5">
+                    <img class="h-10" src="assets/commercial.png" alt="">
+                    <div class="ml-5">
+                    <h3 class="text-xl mb-2 font-bold">Commercial</h3>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
                 </div>
-                <div  class="w-1/2">
-
+                <div class="flex mt-10 mx-7 rounded-xl bg-white p-5">
+                    <img class="h-10" src="assets/residential.png" alt="">
+                    <div class="ml-5">
+                    <h3 class="text-xl mb-2 font-bold">Residential </h3>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
                 </div>
             </div>
-        </div> -->
+                <div class="mt-10">
+                    <img src="assets/Rectangle.png" class="px-8" alt="">
+                </div>
+            </div>
+
+
+
+        </div>
     </main>
 </body>  
 </html>
