Some section corrected

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="text-[#737373] mx-2">Blogs</li>
                     <li class="text-[#737373] mx-2">Contact Us</li>
                 </ul>
-            <div class="bg-[#e6e6e6] h-10 w-10 flex lg:hidden items-center justify-center  rounded-full"><i class="ri-menu-line"></i></div>
+            <div class="bg-[#ececec] h-10 w-10 flex lg:hidden items-center justify-center  rounded-full"><i class="ri-menu-line"></i></div>
             </div>
             <div class="lg:flex hidden lg:visible">
             <div class="flex">
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <div class="flex-col text-center">
-            <div class="mt-20"><img class="mx-auto" src="assets/banner.png" alt=""></div>
+            <div class="mt-20"><img class="p-10 lg:mx-a " src="assets/banner.png" alt=""></div>
             <h1 class="text-3xl font-black m-8">A barn house of this design has a striking appearance</h1>
             <p class="m-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 outline-[#0073ff] rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
