--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <div class="flex-col text-center">
-            <div class="mt-20"><img class="p-10 lg:mx-a " src="assets/banner.png" alt=""></div>
+            <div class="mt-20"><img class="p-10 mx-auto" src="assets/banner.png" alt=""></div>
             <h1 class="text-3xl font-black m-8">A barn house of this design has a striking appearance</h1>
             <p class="m-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 outline-[#0073ff] rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
@@ -48,22 +48,24 @@
     <main>
         <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-40 pb-10 flex">
             <div class="mt-20 lg:flex lg:justify-center">
-            <div class="lg:w-1/3">
+            <div class="lg:w-1/2">
+                    <img src="assets/Vector.png" class="lg:visible hidden lg:h-20" alt="">
+                    <button class="font-black text-sm w-1/2 lg:w-40 justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto">
+                        <i class="text-black ri-arrow-right-line"></i>About Us</button>
                 <div class="">
-                        <button class="font-black text-sm justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto"><i class="text-black ri-arrow-right-line"></i>About Us</button>
-                    <h1 class="mx-10 mt-5 text-2xl font-black text-center lg:text-left">We design thoughtful, liveable spaces</h1>
+                    <h1 class="mx-10 mt-5 text-2xl font-black text-center lg:font-extrabold lg:text-6xl lg:text-left">We design thoughtful, liveable spaces</h1>
                     <p class="mx-10 mt-5 text-center lg:text-left">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <div class="flex mt-10 mx-7 rounded-xl bg-white p-5">
-                    <img class="h-10" src="assets/commercial.png" alt="">
-                    <div class="ml-5">
+                    <img class="h-10  lg:m-5" src="assets/commercial.png" alt="">
+                    <div class="ml-5 lg:py-4">
                     <h3 class="text-xl mb-2 font-bold">Commercial</h3>
                     <p>The barn house captivates with its blend of rustic charm and modern.</p>
                     </div>
                 </div>
                 <div class="flex mt-10 mx-7 rounded-xl bg-white p-5">
-                    <img class="h-10" src="assets/residential.png" alt="">
-                    <div class="ml-5">
+                    <img class="h-10 lg:m-5" src="assets/residential.png" alt="">
+                    <div class="ml-5 lg:py-4">
                     <h3 class="text-xl mb-2 font-bold">Residential </h3>
                     <p>The barn house captivates with its blend of rustic charm and modern.</p>
                     </div>
@@ -71,6 +73,38 @@
             </div>
                 <div class="mt-10">
                     <img src="assets/Rectangle.png" class="px-8" alt="">
+                </div>
+            </div>
+            <!-- Section 3 -->
+        </div>
+        <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-0 pb-10">
+            <div class="mx-auto px-10 text-center  lg:pt-40">
+                <button class="font-black text-sm lg:w-40 justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto"><i class="text-black ri-arrow-right-line"></i>How we works</button>
+                <h1 class="text-xl mb-2 font-bold mt-6">Our Works Process</h1>
+                <p class="mb-2 font-light mt-">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class= "flex-col justify-center lg:flex-row px-5 lg:px-52">
+                <div class="lg:flex lg:gap-5">
+                <div class="h-52 w-full lg:w-1/4 lg:mx-0 bg-[#E7C1D3] mx-auto mt-5 rounded-xl p-8">
+                    <img src="assets/concept.png" alt="">
+                    <h3 class="text-xl mt-3 font-bold">Concept</h3>
+                    <p class="mb-2 font-light mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="h-52 w-full lg:w-1/4 lg:mx-0 bg-[#EFDA6E] mx-auto mt-5 rounded-xl  p-8">
+                    <img src="assets/flow-chart.png" alt="">
+                    <h3 class="text-xl mt-3 font-bold">Design Process</h3>
+                    <p class="mb-2 font-light mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="h-52 w-full lg:w-1/4 lg:mx-0 bg-[#A4DAC3] mx-auto mt-5 rounded-xl  p-8">
+                    <img src="assets/vision.png" alt="">
+                    <h3 class="text-xl mt-3 font-bold">Supervision</h3>
+                    <p class="mb-2 font-light mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="h-52 w-full lg:w-1/4 lg:mx-0 bg-[#77AAEA] mx-auto mt-5 rounded-xl  p-8">
+                    <img src="assets/budget-planning.png" alt="">
+                    <h3 class="text-xl mt-3 font-bold">Budget Planning</h3>
+                    <p class="mb-2 font-light mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
                 </div>
             </div>
 
