Challing section done

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </nav>
         <div class="flex-col text-center">
             <div class="mt-20"><img class="p-10 mx-auto" src="assets/banner.png" alt=""></div>
-            <h1 class="text-3xl font-black m-8">A barn house of this design has a striking appearance</h1>
+            <h1 class="text-3xl lg:text-6xl lg:px-80 font-black m-8">A barn house of this design has a striking appearance</h1>
             <p class="m-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 outline-[#0073ff] rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+            <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
         </div>   
     </header>
     <main>
@@ -80,10 +80,10 @@
         <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-0 pb-10">
             <div class="mx-auto px-10 text-center  lg:pt-40">
                 <button class="font-black text-sm lg:w-40 justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto"><i class="text-black ri-arrow-right-line"></i>How we works</button>
-                <h1 class="text-xl mb-2 font-bold mt-6">Our Works Process</h1>
+                <h1 class="text-xl mb-2 font-bold mt-6 lg:text-4xl lg:font-extrabold">Our Works Process</h1>
                 <p class="mb-2 font-light mt-">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-            <div class= "flex-col justify-center lg:flex-row px-5 lg:px-52">
+            <div class= "flex-col justify-center lg:flex-row px-5 lg:px-52 mb-44">
                 <div class="lg:flex lg:gap-5">
                 <div class="h-52 w-full lg:w-1/4 lg:mx-0 bg-[#E7C1D3] mx-auto mt-5 rounded-xl p-8">
                     <img src="assets/concept.png" alt="">
@@ -107,9 +107,100 @@
                 </div>
                 </div>
             </div>
+            <div class="lg:hidden">
+                <div class="mx-auto px-10 text-center pt-10">
+                    <button class="font-black text-sm justify-center px-5 py-3 rounded-full bg-[#ABEF5F33] flex mx-auto"><i class="text-black ri-arrow-right-line mr-2"></i>Explore our Latest works</button>
+                    <h1 class="text-xl mb-2 font-bold mt-6 ">Our Latest Portfolio</h1>
+                    <p class="mb-2 font-light mt-">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl  pb-3">
+                            <img src="assets/img1.png" class="mx-auto w-full p-4" alt="">
+                            <h3 class="ml-7 font-black">Commercial</h3>
+                            <p class="mx-7 my-2  font-light">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <button class="mx-7 my-3 font- text-l w-80 mx-5 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                        </div>
+                    </div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl">
+                            <img src="assets/img2.png" class="mx-auto w-full p-4" alt="">
+                        </div>
+                    </div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl">
+                            <img src="assets/img5.png" class="mx-auto w-full  p-4" alt="">
+                        </div>
+                    </div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl  pb-3">
+                            <img src="assets/img4.png" class="mx-auto w-full p-4" alt="">
+                            <h3 class="ml-7 font-black">Commercial</h3>
+                            <p class="mx-7 my-2  font-light">The barn house captivates with its blend of rustic charm and modern. </p>
+                            <button class="mx-7 my-3 font- text-l w-80 mx-5 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                        </div>
+                    </div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl">
+                            <img src="assets/img3.png" class="mx-auto w-full p-4" alt="">
+                        </div>
+                    </div>
+                    <div class="m-5">
+                        <div class="mx-auto h-fit bg-gray-50 rounded-xl">
+                            <img src="assets/img5.png" class="mx-auto w-full p-4" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hidden lg:block bg-white">
+                <div>
+                    <div class="mx-auto px-10 text-center pt-10">
+                        <button class="font-black text-l justify-center px-5 py-3 mt-32 rounded-full bg-[#ABEF5F33] flex mx-auto"><i class="text-black ri-arrow-right-line mr-2"></i>Explore our Latest works</button>
+                        <h1 class="text-4xl mb-2 mt-6 lg:text-4xl lg:font-extrabold">Our Latest Portfolio</h1>
+                        <p class="mb-2 mt-5 font-light">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                </div>
+                <div class="mt-24 bg-white py-10">
+                    <div class="flex mx-60 ">
+                        <div class="flex border-solid border-2 border-black-500 rounded-2xl w-3/4 p-5">
+                            <img src="assets/img1.png" class="border-dashed border-2 border-black-100" alt="">
+                        <div class="ml-5">
+                            <h3 class="font-black mt-3">Commercial</h3>
+                            <p class="font-light  mt-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                              <div>  
+                            <button class="flex  mt-3">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                            </div>
+                        </div>
+                        </div>
+                        <div  class="flex ml-10 border-solid border-2 border-black-500 rounded-2xl w-1/5 p-5">
+                            <img src="assets/img2.png" class="border-dashed border-2 border-black-100" alt="">
+                        </div>
+                    </div>
+                    <div  class="flex mx-60 my-10">
+                        <div  class="border-solid border-2 flex border-black-500 w-96 rounded-2xl p-5">
+                            <img src="assets/img3.png" class="border-dashed border-2 border-black-100" alt="">
+                        </div>
+                        <div class="">
+                            <div class="flex border-solid border-2 ml-10 border-black-500 rounded-2xl p-5">
+                                <img src="assets/img4.png" class="border-dashed border-2 border-black-100" alt="">
+                            <div class="ml-5">
+                                <h3 class="font-black mt-3">Commercial</h3>
+                                <p class="font-light mt-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                                  <div>  
+                                <button class="flex  mt-3">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                                </div>
+                            </div>
+                            </div>      
+                        </div>
+                        <div  class="flex border-solid border-2 border-black-500 w-96 rounded-2xl mx-10 p-5">
+                            <img src="assets/img5.png" class="border-dashed border-2 border-black-100" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-
-
+            <!-- Challanging section -->
+            <div></div>
         </div>
     </main>
 </body>  
