self made section done

--- a/index.html
+++ b/index.html
@@ -200,8 +200,22 @@
             </div>
 
             <!-- Challanging section -->
-            <div></div>
+            <div>
+                <div class="lg:flex lg:mx-56 gap-10 lg:gap-28 p-10">
+                    <div class="lg:w-1/2 lg:mt-20">
+                        <h2 class="font-black text-3xl lg:text-6xl">Article</h2>
+                        <hr class="mt-5">
+                        <p class="font-light mt-5 lg:mt-5"> Interior design is more than just aesthetics; it's about creating spaces that reflect your personality, enhance your lifestyle, and evoke a sense of tranquility and well-being. By understanding the psychology of space and incorporating elements that reflect your personal style, you can transform your living environment into a haven that is both beautiful and functional.</p>
+                    </div>
+                    <div class="mt-10 lg:w-1/2 lg:h-96 bg-white rounded-3xl p-2">
+                        <div class="h-full w-full">
+                            <iframe class=" rounded-2xl h-48 lg:h-full w-full" src="https://www.youtube.com/embed/G8iHrqE-oCE" title="Touring One of the Most Expensive Homes in THAILAND!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>    
+                    </div>
+                </div>
+            </div>
         </div>
+        
     </main>
 </body>  
 </html>
