Input section done

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <img src="assets/img1.png" class="mx-auto w-full p-4" alt="">
                             <h3 class="ml-7 font-black">Commercial</h3>
                             <p class="mx-7 my-2  font-light">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-                            <button class="mx-7 my-3 font- text-l w-80 mx-5 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                            <button class="mx-5 my-3 font- text-l w-80 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
                         </div>
                     </div>
                     <div class="m-5">
@@ -137,7 +137,7 @@
                             <img src="assets/img4.png" class="mx-auto w-full p-4" alt="">
                             <h3 class="ml-7 font-black">Commercial</h3>
                             <p class="mx-7 my-2  font-light">The barn house captivates with its blend of rustic charm and modern. </p>
-                            <button class="mx-7 my-3 font- text-l w-80 mx-5 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+                            <button class="mx-5 my-3 font- text-l w-80 rounded-full flex ">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
                         </div>
                     </div>
                     <div class="m-5">
@@ -215,7 +215,31 @@
                 </div>
             </div>
         </div>
-        
+        <div class="h-fit w-full pb-32" id="bg-image" >
+            <div>
+                <div class="mx-auto px-10 text-center pt-20 lg:pt-40">
+                    <button class="font-black text-sm lg:w-40 justify-center px-5 py-3 rounded-full bg-[#ABEF5F33] flex mx-auto"><i class="text-black ri-arrow-right-line"></i>Let’s Connect</button>
+                    <h1 class="text-xl mb-2 font-bold mt-6 lg:text-4xl lg:font-extrabold">Let’s Discuss Next Project</h1>
+                    <p class="mb-2 font-light mt-">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>  
+            </div>
+            <div class="p-10 lg:mx-48">
+                <div class="lg:flex lg:gap-5">
+                <input class="w-full mt-5 rounded-full p-5" type="text" placeholder="First Name*">
+                <input class="w-full mt-5 rounded-full p-5" type="text" placeholder="Last Name*">
+                </div>
+                <div class="lg:flex lg:gap-5">
+                <input class="w-full mt-5 rounded-full p-5" type="text" placeholder="Phone Number*">
+                <input class="w-full mt-5 rounded-full p-5" type="text" placeholder="Email Number*">
+                </div>
+                <div class="lg:flex lg:gap-5">
+                <input class="w-full h-60 mt-5 rounded-3xl p-5 " type="text" placeholder="Write your message here">
+                </div>
+            </div>
+            <div class="lg:mx-56">
+            <button class="mt-5 font-black text-xl w-80 lg:w-full justify-center px-5 py-3  rounded-full bg-[#ABEF5F] flex mx-auto">Send Mail<div class="ml-2 bg-black h-7 w-7 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line text-white"></i></div></button>
+            </div>
+        </div>
     </main>
 </body>  
 </html>
