--- a/index.html
+++ b/index.html
@@ -241,5 +241,27 @@
             </div>
         </div>
     </main>
+    <footer class="bg-[#1C1C1C] pb-20 lg:pb-52">
+        <div class="flex items-center justify-center  pt-20 lg:pt-52">
+            <div class="bg-[#ABEF5F] h-8 w-8 flex items-center justify-center  rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div>
+            <h1 class="font-black text-white ml-2 text-2xl">Rinterio</h1>
+        </div>
+        <div class="mx-10">
+            <p class="mb-2 font-extralight text-sm mt-5 text-center 
+            text-slate-100">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="mx-auto text-center">
+            <ul class="lg:flex lg:justify-center lg:gap-20">
+                <li class="mt-10 font-semibold text-white">Home</li>
+                <li class="mt-10 font-semibold text-white">Services</li>
+                <li class="mt-10 font-semibold text-white">Portfolio</li>
+                <li class="mt-10 font-semibold text-white">Blogs</li>
+                <li class="mt-10 font-semibold text-white">Contact Us</li>
+            </ul>
+        </div>
+        <div class="lg:mx-56 mt-20">
+            <button class="mt-5 font-black text-xl w-56 justify-center px-5 py-3  rounded-full bg-[#ABEF5F] flex mx-auto">Book Consult<div class="ml-2 bg-black h-7 w-7 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line text-white"></i></div></button>
+        </div>
+    </footer>
 </body>  
 </html>
