--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <li class="text-[#737373] mx-2">Blogs</li>
                     <li class="text-[#737373] mx-2">Contact Us</li>
                 </ul>
-            <div class="bg-[#ececec] h-10 w-10 flex lg:hidden items-center justify-center  rounded-full"><i class="ri-menu-line"></i></div>
+            <div class="bg-[#f1f1f1] h-10 w-10 flex lg:hidden items-center justify-center rounded-full"><i class="ri-menu-line"></i></div>
             </div>
             <div class="lg:flex hidden lg:visible">
             <div class="flex">
-                <a class="mx-2 flex items-center justify-center bg-[#e4e4e4] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
-                <a class="mx-2 flex items-center justify-center bg-[#e4e4e4] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#f1f1f1] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#f1f1f1] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
             </div>
                 <div class="flex mx-2 items-center px-5 bg-[#ABEF5F] rounded-full text-center">
                     <a class="">Book Consult</a>
@@ -42,15 +42,19 @@
             <div class="mt-20"><img class="p-10 mx-auto" src="assets/banner.png" alt=""></div>
             <h1 class="text-3xl lg:text-6xl lg:px-80 font-black m-8">A barn house of this design has a striking appearance</h1>
             <p class="m-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-6 w-6 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
+            <button class="mt-5 font-black text-xl w-80 justify-center px-5 py-3 rounded-full bg-[#ABEF5F80] flex mx-auto">View Details<div class="ml-2 bg-[#ABEF5F] h-7 w-7 text-center rounded-full -rotate-45"><i class="ri-arrow-right-line"></i></div></button>
         </div>   
     </header>
     <main>
         <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-40 pb-10 flex">
+
             <div class="mt-20 lg:flex lg:justify-center">
             <div class="lg:w-1/2">
-                    <img src="assets/Vector.png" class="lg:visible hidden lg:h-20" alt="">
-                    <button class="font-black text-sm w-1/2 lg:w-40 justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto">
+                <div class="hidden lg:block">
+                    <img class="border-dashed border-2 border-[#00000044]  py-5" src="assets/Vector.png" alt="">
+                        <button class="font-black text-sm  px-5 py-3 rounded-full bg-[#ffffff] flex mt-5 ml-10"><i class="text-black ri-arrow-right-line"></i>How we works</button>
+                </div>
+                    <button class="font-black text-sm w-1/2 lg:w-40 lg:hidden justify-center px-5 py-3 rounded-full bg-[#ffffff] flex mx-auto">
                         <i class="text-black ri-arrow-right-line"></i>About Us</button>
                 <div class="">
                     <h1 class="mx-10 mt-5 text-2xl font-black text-center lg:font-extrabold lg:text-6xl lg:text-left">We design thoughtful, liveable spaces</h1>
@@ -71,7 +75,7 @@
                     </div>
                 </div>
             </div>
-                <div class="mt-10">
+                <div class="mt-10 lg:mt-36">
                     <img src="assets/Rectangle.png" class="px-8" alt="">
                 </div>
             </div>
@@ -233,7 +237,7 @@
                 <input class="w-full mt-5 rounded-full p-5" type="text" placeholder="Email Number*">
                 </div>
                 <div class="lg:flex lg:gap-5">
-                <input class="w-full h-60 mt-5 rounded-3xl p-5 " type="text" placeholder="Write your message here">
+                <input class="w-full h-60 mt-5  rounded-3xl p-5 " type="text" placeholder="Write your message here">
                 </div>
             </div>
             <div class="lg:mx-56">
