--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Assignment 3</title>
 </head>
 <body>
-    <header class="h-screen">
+    <header class="h-screen bg-gradient-to-tr from-white to-gray-200">
         <nav class="flex justify-around pt-5">
             <div class="flex items-center">
                 <div class="bg-[#ABEF5F] h-8 w-8 flex items-center justify-center  rounded-2xl -rotate-45"><i class="ri-arrow-right-line"></i></div>
@@ -23,12 +23,12 @@
                     <li class="text-[#737373] mx-2">Blogs</li>
                     <li class="text-[#737373] mx-2">Contact Us</li>
                 </ul>
-            <div class="bg-[#f1f1f1] h-10 w-10 flex lg:hidden items-center justify-center rounded-full"><i class="ri-menu-line"></i></div>
+            <div class="bg-[#ffffff] h-10 w-10 flex lg:hidden items-center justify-center rounded-full"><i class="ri-menu-line"></i></div>
             </div>
             <div class="lg:flex hidden lg:visible">
             <div class="flex">
-                <a class="mx-2 flex items-center justify-center bg-[#f1f1f1] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
-                <a class="mx-2 flex items-center justify-center bg-[#f1f1f1] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#ffffff] h-10 w-10 rounded-full"><i class="ri-search-line"></i></a>
+                <a class="mx-2 flex items-center justify-center bg-[#ffffff] h-10 w-10  rounded-full "><i class="ri-shopping-cart-2-line"></i></a>
             </div>
                 <div class="flex mx-2 items-center px-5 bg-[#ABEF5F] rounded-full text-center">
                     <a class="">Book Consult</a>
@@ -46,7 +46,7 @@
         </div>   
     </header>
     <main>
-        <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-40 pb-10 flex">
+        <div class="bg-[#f1f1f1] lg:justify-center h-fit w-full mt-0 pb-10 flex">
 
             <div class="mt-20 lg:flex lg:justify-center">
             <div class="lg:w-1/2">
